--- a/package.json
+++ b/package.json
@@ -7,5 +7,9 @@
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^7.0.3"
+  },
+    "scripts":{
+    "start": "node index.js",
+    "build": "node index.js"
   }
 }
