--- a/package.json
+++ b/package.json
@@ -1,4 +1,8 @@
 {
+  "name": "puzzle-app-backend",
+  "version": "1.0.0",
+  "description": "",
+  "main": "index.js",
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "cookie-parser": "^1.4.6",
@@ -9,7 +13,6 @@
     "mongoose": "^7.0.3"
   },
     "scripts":{
-    "start": "node index.js",
-    "build": "yarn && node index.js"
+    "start": "node index.js"
   }
 }
